--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
 
 body {
     
-    background-color:rgb(2, 0, 27);
-    background: url("../project-1-game/Image/Render\ 2.jpg");
+    background-color:rgb(0, 0, 0);
+    background: url("../project-1-game/Image/black-beach-suites.jpeg");
     background-size: cover;
+    
     color: white;
     /* padding: 0;
     margin: 0; */
@@ -86,7 +87,8 @@ body {
     width:fit-content;
     position: absolute;
     z-index: 2;
-    background:rgba(39, 1, 1, 0.8);
+    color: red;
+    background:rgba(7, 0, 0, 0.8);
     display: flex;
     /* border: 10px solid rgb(102, 0, 0);
     border-radius: 20px; */
