--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     background-color:rgb(0, 0, 0);
     background: url("../project-1-game/Image/black-beach-suites.jpeg");
     background-size: cover;
-    
+    font-family: 'Baloo 2', cursive;
     color: white;
     /* padding: 0;
     margin: 0; */
@@ -43,16 +43,20 @@ body {
 #backpack {
     
     background-color: black;
+    border: 3px solid rgb(165, 97, 42);
+    border-radius: 30px;
     padding: 10px;
     min-width: 50px;
-    max-width: 100px;
+    max-width: 200px;
     min-height: 30px;
+    box-shadow: 0 0 20px 4px rgb(26, 0, 0);
 
 }
 
 #inventory {
     color: white;
-    
+    border: 1px solid white;
+    border-radius: 13px;
     
 }
 
