tried making one of the images stored on imgur instead of locally

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
     
     background-color:rgb(0, 0, 0);
-    background: url("./project-1-game/Image/black-beach-suites.jpeg");
+    background: url("https://i.imgur.com/AooYHUh.jpg");
     background-size: cover;
     font-family: 'Baloo 2', cursive;
     color: white;
