--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     max-width: 80%;
     padding: 20px;
     /* background-color: rgba(39, 1, 1, 0.8); */
-    background-image: url("./project-1-game/Image/darkbackground.png");
+    background-image: url("https://i.imgur.com/m6EPmJd.png");
     border: 1px solid rgb(54, 19, 19);
     border-radius: 6px;
     box-shadow: 0 0 10px 4px rgb(0, 0, 0);
@@ -52,7 +52,7 @@ body {
     right: 100px;
     color: rgb(255, 248, 151);
     background-color: black;
-    background-image: url("./project-1-game/Image/backpack\ texture.jpeg");
+    background-image: url("https://i.imgur.com/qvf2fUI.jpg");
     border: 3px solid rgba(165, 108, 79, 0.6);
     border-radius: 30px;
     padding: 5px;
@@ -81,7 +81,7 @@ body {
     height: 60px;
     font-size: 20px;
     background-color: rgb(0, 22, 56);
-    background-image: url("./project-1-game/Image/button\ texture.jpeg");
+    background-image: url("https://i.imgur.com/vDNW0Jm.jpg");
     color: white;
     
     border: 3px solid rgb(92, 54, 54);
