--- a/style.css
+++ b/style.css
@@ -7,34 +7,22 @@ body {
     background-size: cover;
     font-family: 'Baloo 2', cursive;
     color: white;
-    /* padding: 0;
-    margin: 0; */
-    /* display: flex;
-    justify-content: space-around;
-    align-items:center; */
-    
 }
 
 .container {
     position: relative;
     top: 130px;
     left: 200px;
-    /* margin: 130px; */
     font-family: 'Baloo 2', cursive;
     font-size: 20px;
     width: 700px;
     max-width: 80%;
     padding: 20px;
-    /* background-color: rgba(39, 1, 1, 0.8); */
+    background-color: rgba(39, 1, 1, 0.8);
     background-image: url("https://i.imgur.com/m6EPmJd.png");
     border: 1px solid rgb(54, 19, 19);
     border-radius: 6px;
     box-shadow: 0 0 10px 4px rgb(0, 0, 0);
-    
-    /* z-index: 1; */
-    /* width: 50vw;
-    height: 25vh; */
-
 }
 
 
@@ -60,14 +48,12 @@ body {
     max-width: 200px;
     min-height: 30px;
     box-shadow: 0 0 10px 4px rgb(0, 0, 0);
-
 }
 
 #inventory {
     color: white;
     border: 1px solid white;
-    border-radius: 13px;
-    
+    border-radius: 13px; 
 }
 
 #choice-btns {
@@ -83,7 +69,6 @@ body {
     background-color: rgb(0, 22, 56);
     background-image: url("https://i.imgur.com/vDNW0Jm.jpg");
     color: white;
-    
     border: 3px solid rgb(92, 54, 54);
     border-radius: 7px;
     box-shadow: 0 0 20px 4px black;
@@ -94,34 +79,33 @@ body {
 .button:hover {
     border: 3px solid rgb(161, 35, 35);
     transform: scale(1.2);
-    
 }
 
 #end-message {
     position: absolute;
     font-size: 70px;
-    top: 200px;
+    top: 70px;
     padding: 20px;
     font-family: 'Carrois Gothic SC', sans-serif;
     width:fit-content;
+    max-width: 95%;
     position: absolute;
     z-index: 2;
     color: rgb(173, 0, 0);
-    background:rgba(7, 0, 0, 0.8);
+    background:rgba(7, 0, 0, 0.9);
     display: flex;
     border: 10px solid rgb(102, 0, 0);
-    border-radius: 20px;
-    
-    
+    border-radius: 20px; 
 }
 
 #win-message {
     position: absolute;
-    top: 100px;
+    top: 50px;
     padding: 20px;
     font-family: 'Carrois Gothic SC', sans-serif;
     font-size: 57px;
     width:fit-content;
+    max-width: 95%;
     position: absolute;
     z-index: 2;
     color: rgb(0, 173, 158);
@@ -129,13 +113,9 @@ body {
     border: 4px solid rgb(0, 173, 158);
     border-radius: 20px;
     display: flex;
+}
 
 h1 {
     font-size: 70px;
     text-align: center;
-}
-#restart-button {
-    text-align: right;
-    
-
 }
